--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@ a:hover {
 	background-color: #003;
 }
 
+#lefttext {
+	font-size: 11px;
+	font-family: Verdana, Geneva, Arial, sans-serif;
+	text-align: center;
+	position: absolute;
+	bottom: 50px;
+	left: 0px;
+	width: 5%;
+	height: 20px;
+	visibility: hidden;
+	display: block
+}
+
 #potatoProgress {
 	width: 100%;
 	background-color: grey;
@@ -198,6 +211,11 @@ var x = setInterval(function() {
 </div>
 <div id="rightbar">
 	<img src="temp_us_n.jpg" width="100%">
+</div>
+</div>
+<div id="leftbar">
+	Best wishes so far!
+	//Comments on hidden things
 </div>
 </body>
 </html>
